# OET_SEP22

./: .gitignore  CMakeLists.txt  README.md
cpp/: Solution.cpp  Solution.h  main.cpp
cpp/RedEyeRemover/includes/: PatternManipulations.h  RedEyeRemover.h  pixelCanvas.h
cpp/RedEyeRemover/src/: PatternManipulations.cpp  RedEyeRemover.cpp  pixelCanvas.cpp
cpp/RedEyeRemover/utils/: CommonDefines.h  EyePatterns.h  FileParser.h  GlobalOverloads.cpp  GlobalOverloads.h
test_input/: dummy.txt
